# Freemint

./: Cargo.toml  README.md
contracts/script/: FreeMint.s.sol
contracts/src/: FreeMint.sol
freemint/: renovate.json
freemint/contracts/: foundry.toml
freemint/contracts/script/: Distributor.s.sol
freemint/contracts/src/: Distributor.sol
freemint/contracts/test/: Distributor.t.sol  FreeMint.t.sol
freemint/src/account/: generate.rs
freemint/src/distributor/: distribute.rs
freemint/src/executor/: mod.rs
freemint/src/mint/: miner.rs  mod.rs
freemint/tests/common/: deployer.rs  mod.rs  model.rs
freemint/tests/e2e/: workflow_test.rs
src/: lib.rs
src/account/: mod.rs
src/distributor/: mod.rs
src/executor/: caller.rs  execute.rs
tests/: mod.rs
tests/common/: artifact.rs  balance.rs  provider.rs
tests/e2e/: mod.rs
tests/integration/: distribute_test.rs  mint_test.rs  mod.rs
