[package]
name = "stormint"
version = "0.1.0"
edition = "2021"
authors = ["confucian <confucian.e@gmail.com>"]
description = "A blazing fast script that supports multi-account minting of FreeMint tokens."
repository = "https://github.com/Confucian-e/stormint.git"
documentation = "https://docs.rs/stormint"
readme = "README.md"
license = "MIT"
keywords = ["blockchain", "ethereum", "token", "mint"]
categories = ["cryptography::cryptocurrencies"]
include = ["/src/*", "/Cargo.toml", "/README.md", "/LICENSE"]

[dependencies]
alloy = { version = "0.6", features = ["full", "signer-mnemonic"] }
tokio = { version = "1.41", features = ["full"] }
eyre = "0.6"
rayon = "1.10"
indicatif = "0.17"
futures = "0.3"

[dev-dependencies]
alloy = { version = "0.6", features = ["provider-anvil-node", "getrandom"] }
alloy-node-bindings = "0.6"
serde = "1.0"
serde_json = "1.0"
